src/objects/Set__c.object
<CustomObject>
    <fields>
        <fullName>BracketNumber__c</fullName>
        <description>The number the set falls in the tournament, 1 will be the first match played in a round.</description>
        <label>BracketNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loser__c</fullName>
        <description>Loser of this set.</description>
        <formula>IF(Player1Wins__c &gt; Player2Wins__c, Player2__r.Name,
IF(Player2Wins__c &gt; Player1Wins__c, Player1__r.Name,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player1Character__c</fullName>
        <label>Player1Character</label>
        <referenceTo>Character__c</referenceTo>
        <relationshipLabel>Sets</relationshipLabel>
        <relationshipName>Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Player1Losses__c</fullName>
        <label>Player1Losses</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player1Wins__c</fullName>
        <label>Player1Wins</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player1__c</fullName>
        <label>Player1</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Sets</relationshipLabel>
        <relationshipName>Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Player2Character__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Player2Character</label>
        <referenceTo>Character__c</referenceTo>
        <relationshipLabel>Sets (User2Character)</relationshipLabel>
        <relationshipName>Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Player2Losses__c</fullName>
        <label>Player2Losses</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player2Wins__c</fullName>
        <label>Player2Wins</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Player2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Player2</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Sets (Player2)</relationshipLabel>
        <relationshipName>Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <label>Round</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round 1</fullName>
                </value>
                <value>
                    <fullName>Round 2</fullName>
                </value>
                <value>
                    <fullName>Round 3</fullName>
                </value>
                <value>
                    <fullName>Losers Round 1</fullName>
                </value>
                <value>
                    <fullName>Losers Round 2</fullName>
                </value>
                <value>
                    <fullName>Losers Round 3</fullName>
                </value>
                <value>
                    <fullName>Losers Round 4</fullName>
                </value>
                <value>
                    <fullName>Losers Round 5</fullName>
                </value>
                <value>
                    <fullName>Semifinals</fullName>
                </value>
                <value>
                    <fullName>Finals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tournament__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tournament</label>
        <referenceTo>Tournament__c</referenceTo>
        <relationshipLabel>Sets</relationshipLabel>
        <relationshipName>Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <formula>IF(Player1Wins__c &gt; Player2Wins__c, Player1__r.Name,
IF(Player2Wins__c &gt; Player1Wins__c, Player2__r.Name,null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Winner</label>
        <type>Text</type>
    </fields>
    <label>Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Loser__c</columns>
        <columns>Player1Losses__c</columns>
        <columns>Player1Wins__c</columns>
        <columns>Round__c</columns>
        <columns>Tournament__c</columns>
        <columns>BracketNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-#{0000}</displayFormat>
        <label>Set Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>